--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,12 +1,12 @@
-\chapter{Analysis and Specification of Needs}
+\chapter{Analysis and Specification of Requirements}
 
-\section{Introduction}
+\section*{Introduction}
 
-In this chapter, we will present the analysis and specification of needs. We start by presenting the specification of the requirements, illustrating them using the diagram of the global use cases. Then we will present our project architecture and our working environment, and finally we will present our product backlog and releases planning, and we will close our chapter with a conclusion.
+In this chapter, we will present the analysis and specification of Requirements. We start by presenting the specification of the requirements, illustrating them using the diagram of the global use cases. Then we will present our project architecture and our working environment, and finally we will present our product backlog and releases planning, and we will close our chapter with a conclusion.
 
 \section{Requirements Specification}
 
-In this section, we will define the actors of our application and the functional and non-functional needs that our application aims to fulfill.
+In this section, we will define the actors of our application and the functional and non-functional Requirements that our application aims to fulfill.
 
 \subsection{Identifying Actors}
 
@@ -344,7 +344,7 @@ Table \ref{tab:product-backlog} shows the product backlog for our Korpor project
     \hline
     PB002 & User Management & As a user, I want to manage my profile information & Must \\
     \hline
-    PB003 & Authentication & As a user, I want to securely log out of my account & Must \\
+    PB003 & Authentication & As a user, I want to securely reset my password & Must \\
     \hline
     PB004 & Admin Management & As a Super Admin, I want to manage admin accounts for different real estate companies & Should \\
     
@@ -509,7 +509,7 @@ Figure \ref{fig:gantt-chart} shows the Gantt chart that describes the progress o
 
 % \vspace{2cm}
 
-\section{Conclusion}
+\section*{Conclusion}
 
 Our Sprint 0 marked the exciting start of our KORPOR project \cite{ScaledAgileFramework2024, SutherlandScrum2020}. We defined global and specific objectives, developed a solid architecture, and configured an optimal working environment. With a clear vision of the initial product backlog and preliminary planning for upcoming sprints, we are ready to achieve our vision and achieve our goals successfully \cite{SchwarzScrum2019, RubinEssentialScrum2012}.
 
