--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,4 +1,4 @@
-\chapter{Implementation}
+\chapter{Foundation}
 
 \section{Introduction}
 This chapter details the implementation phase of our project, which follows an agile methodology with four sprints. Each sprint focuses on delivering specific features and functionality according to the project backlog. The implementation utilizes a modern tech stack consisting of React \cite{ReactWebsite} with Vite \cite{ViteJSWebsite} for the frontend, Node.js \cite{NodeJSWebsite} with Express.js \cite{ExpressJSWebsite} for the backend, MySQL \cite{MySQLWebsite} for database management, and Tailwind CSS \cite{TailwindWebsite} for styling.
@@ -18,7 +18,7 @@ Our first sprint focused on establishing essential foundational components of th
 \subsection{Data Collection and Scraping}
 The first sprint also included the development of robust data collection systems focused on gathering real estate market data. These systems were designed to autonomously collect, validate, and store property listings, market trends, and other relevant information from various online sources. This data forms the foundation for the AI-driven features discussed in Chapter 4, including property valuation models and recommendation systems.
 
-\section{Sprint 1: Authentication and User Management}
+\section{Sprint 1: Authentication and User Management }
 \subsection{Overview}
 The first sprint focuses on establishing the core authentication system and user management functionality. This foundation is critical for all subsequent features as it defines user roles and access controls.
 
