--- a/summary_abstract.tex
+++ b/summary_abstract.tex
@@ -48,9 +48,9 @@
 \end{center}
 \vspace{0.5cm}
 
-\noindent \firstparagraph{T}his project is part of our graduation project at the Higher Institute of Computer Science and Mathematics of Monastir for the 2024-2025 academic year, leading to the national diploma of fundamental license in Computer Science.
-Carried out within the company \textbf{\textcolor{primary}{"KZ IT Services"}}, our main objective is the development of a mobile application and web back office dedicated to real estate investment called \textbf{\textcolor{primary}{"KORPOR"}}. We used MySQL to manage the databases, Express-Node.js for the backend implementation, and React and Vite for the frontend.
-The project management followed the SCRUM Agile methodology, with an emphasis on agile practices such as sprint planning, sprint management, and regular meetings.
+\noindent \firstparagraph{C}e projet s'inscrit dans le cadre de notre projet de fin d'études à l'Institut Supérieur d'Informatique et de Mathématiques de Monastir pour l'année universitaire 2024-2025, menant au diplôme national de licence fondamentale en Informatique.
+Réalisé au sein de l'entreprise \textbf{\textcolor{primary}{"KZ IT Services"}}, notre objectif principal est le développement d'une application mobile et d'un back-office web dédiés à l'investissement immobilier nommé \textbf{\textcolor{primary}{"KORPOR"}}. Nous avons utilisé MySQL pour gérer les bases de données, Express-Node.js pour l'implémentation du backend, et React et Vite pour le frontend.
+La gestion du projet a suivi la méthodologie Agile SCRUM, avec un accent sur les pratiques agiles telles que la planification de sprint, la gestion de sprint et les réunions régulières.
 
 % Keywords in a more professional design
 \vspace{0.3cm}
