fix(coloring): changing the main color to black

--- a/rapport.tex
+++ b/rapport.tex
@@ -37,7 +37,7 @@
 \addbibresource{references.bib} % Specify the BibTeX file
 
 % Define a refined professional color palette
-\definecolor{primary}{RGB}{33, 64, 95} % Deep navy blue
+\definecolor{primary}{RGB}{7, 6, 6} % Deep navy blue
 \definecolor{secondary}{RGB}{145, 145, 145} % Medium gray
 \definecolor{accent}{RGB}{201, 172, 140} % Gold/Bronze accent
 \definecolor{background}{RGB}{248, 248, 248} % Light background
@@ -73,7 +73,7 @@
 \fancyhead[L]{\textit{\leftmark}}
 % Add page number to center footer
 \fancyfoot[C]{\thepage}
-\fancyfoot[R]{\textcolor{secondary}{\small{Final Year Project}}}
+\fancyfoot[R]{\textcolor{secondary}{\small{KORPOR}}}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.2pt}
 
@@ -81,7 +81,7 @@
 \fancypagestyle{plain}{%
   \fancyhf{}%
   \fancyfoot[C]{\thepage}%
-  \fancyfoot[R]{\textcolor{secondary}{\small{Final Year Project}}}%
+  \fancyfoot[R]{\textcolor{secondary}{\small{KORPOR}}}%
   \renewcommand{\headrulewidth}{0pt}%
   \renewcommand{\footrulewidth}{0.2pt}%
 }
