fix(summary): change the description of the summary to fit more the project

--- a/summary_abstract.tex
+++ b/summary_abstract.tex
@@ -1,5 +1,6 @@
 % Summary and Abstract on the same page
 \thispagestyle{empty} % Remove page style for this page
+\vspace{2.5cm}
 
 % Create a more elegant title for Summary
 \begin{center}
@@ -11,7 +12,7 @@
 \end{center}
 \vspace{0.5cm}
 
-\noindent \firstparagraph{T}his work is part of the completion of our Final Year Project at the Higher Institute of Computer Science and Mathematics of Monastir for the academic year 2024-2025, aiming for the National Fundamental License Diploma in Computer Science. Conducted within the company \textbf{\textcolor{primary}{'KZ IT Services'}}, our main objective is the development of a mobile application and a web back-office dedicated to real estate investment named \textbf{\textcolor{primary}{'KORPOR'}}. We used MySQL to manage the databases, Express-Node.js to implement the backend, and React and Vite to implement the frontend. Project management followed the SCRUM Agile methodology, emphasizing agile practices such as sprint planning, sprint management, and regular meetings.
+\noindent \firstparagraph{T}his work is part of our Final Year Project at the Higher Institute of Computer Science and Mathematics of Monastir for 2024-2025. Conducted at \textbf{\textcolor{primary}{'KZ IT Services'}}, we developed \textbf{\textcolor{primary}{'KORPOR'}}, a real estate investment platform with a mobile app and web back-office. Using MySQL, Express-Node.js, React, and Vite, the platform offers fractional property ownership with AI for valuations and recommendations. Blockchain technology secures transactions while SCRUM methodology guided our development process.
 
 % Keywords in a more professional design
 \vspace{0.3cm}
@@ -26,17 +27,10 @@
     bottom=4pt,
     width=\textwidth
 ]
-\textbf{Keywords:} Blockchain Technology, AI, MySQL, Express-Node.js, React, Vite.
+\textbf{Keywords:} Blockchain Technology, AI, MySQL, Express-Node.js, React, Vite, Real Estate Investment.
 \end{tcolorbox}
 
-\vspace{2cm} % Space between sections
-
-% Horizontal rule to separate sections
-% \begin{center}
-% \textcolor{secondary}{\rule{0.7\textwidth}{0.5pt}}
-% \end{center}
-
-% \vspace{1.2cm}
+\vspace{3cm} % Space between sections
 
 % Create a more elegant title for Abstract
 \begin{center}
@@ -48,9 +42,7 @@
 \end{center}
 \vspace{0.5cm}
 
-\noindent \firstparagraph{C}e projet s'inscrit dans le cadre de notre projet de fin d'études à l'Institut Supérieur d'Informatique et de Mathématiques de Monastir pour l'année universitaire 2024-2025, menant au diplôme national de licence fondamentale en Informatique.
-Réalisé au sein de l'entreprise \textbf{\textcolor{primary}{"KZ IT Services"}}, notre objectif principal est le développement d'une application mobile et d'un back-office web dédiés à l'investissement immobilier nommé \textbf{\textcolor{primary}{"KORPOR"}}. Nous avons utilisé MySQL pour gérer les bases de données, Express-Node.js pour l'implémentation du backend, et React et Vite pour le frontend.
-La gestion du projet a suivi la méthodologie Agile SCRUM, avec un accent sur les pratiques agiles telles que la planification de sprint, la gestion de sprint et les réunions régulières.
+\noindent \firstparagraph{C}e projet s'inscrit dans le cadre de notre projet de fin d'études à l'Institut Supérieur d'Informatique et de Mathématiques de Monastir pour 2024-2025. Réalisé chez \textbf{\textcolor{primary}{"KZ IT Services"}}, nous avons développé \textbf{\textcolor{primary}{"KORPOR"}}, une plateforme d'investissement immobilier avec application mobile et back-office web. Utilisant MySQL, Express-Node.js, React et Vite, la plateforme permet la propriété fractionnée avec IA pour évaluations et recommandations. La blockchain sécurise les transactions tandis que la méthodologie SCRUM a guidé notre processus de développement.
 
 % Keywords in a more professional design
 \vspace{0.3cm}
@@ -65,7 +57,7 @@ La gestion du projet a suivi la méthodologie Agile SCRUM, avec un accent sur le
     bottom=4pt,
     width=\textwidth
 ]
-\textbf{Keywords:} Blockchain Technology, AI, MySQL, Express-Node.js, React, Vite.
+\textbf{Keywords:} Blockchain Technology, AI, MySQL, Express-Node.js, React, Vite, Investissement Immobilier.
 \end{tcolorbox}
 
 % Ensure Summary and Abstract stay on the same page
